--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8080
+spring.data.mongodb.uri=mongodb://root:passroot@192.168.1.13:27018/
+spring.data.mongodb.database=TODOLIST
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=root
+spring.data.mongodb.passroot=passroot
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=192.168.1.13
